# nexum-contracts

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  deploy_pool.sh  deployed_contracts.json  lib.rs  pool_usdc-pool.json  pool_xlm-conservative.json  pool_xlm-high-risk.json  setup.sh  test.sh  test_integration.sh
borrow_contract/: Cargo.toml
borrow_contract/contracts/src/: lib.rs
lending_vault/: Cargo.toml
lending_vault/contracts/src/: lib.rs
lending_vault/test_snapshots/test/: test_deposit_and_shares.1.json  test_disburse_exceeds_liquidity.1.json  test_disburse_exceeds_max_utilization.1.json  test_disburse_loan.1.json  test_full_withdraw.1.json  test_liquidation_proceeds.1.json  test_multiple_deposits.1.json  test_pause_blocks_operations.1.json  test_repayment_splits_interest.1.json  test_share_value_increases_with_interest.1.json  test_utilization_rate.1.json  test_withdraw.1.json  test_withdraw_too_many_shares.1.json
receivable_token/: Cargo.toml
receivable_token/contracts/src/: lib.rs
receivable_token/test_snapshots/test/: test_init_and_mint.1.json  test_lock_unlock.1.json  test_multiple_mints.1.json  test_pause_blocks_mint.1.json  test_settle.1.json  test_transfer.1.json  test_transfer_collateralized_fails.1.json  test_zero_face_value_fails.1.json
