[workspace]
resolver = "2"
members = [
    "receivable_token",
    "lending_vault",
    "borrow_contract",
]

[workspace.dependencies]
soroban-sdk = "21.7.4"
soroban-token-sdk = "21.7.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
